--- a/style.css
+++ b/style.css
@@ -273,6 +273,22 @@ span{
     right: -8px;
     animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
 }
+.technologies-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    border: 1px red solid;
+}
+.tech-box{
+    width: 10vw;
+    display: flex;
+    border: 1px red solid;
+}
+.tech-box i{
+    font-size: 14rem;
+    color: var(--main-color)
+}
 .services h2{
     margin-bottom: 5rem;
 }
