--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --bg-color: #141414;
     --second-bg-color: #191919;
     --text-color: white;
-    --main-color: #0077ff;
+    --main-color: #21b368;
 }
 
 html{
@@ -22,6 +22,7 @@ html{
 body{
     background: var(--bg-color);
     color: var(--text-color);
+    width: 100vw;
 }
 .header{
     position: fixed;
@@ -342,26 +343,48 @@ span{
 }
 .projects-container{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-content: center;
     align-items: center;
     gap: 2.5rem;
+    margin: 100px;
 }
 .projects-container .projects-box{
     position: relative;
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--bg-color);
-    overflow: hidden;
-    display: flex;
+    /* overflow: hidden; */
+    /* display: inline-block; */
+    min-height: 400px
 }
 .projects-box img{
     width: 100%;
+    border-radius: 2rem;
     transition: 0.5s ease;
 }
-.projects-box:hover img{
+/* .projects-box:hover img{
     transform: scale(1.1);
+} */
+.projects-box{
+    transition: 0.5s ease;
+    /* border: 2px solid red; */
+}
+.projects-box a{
+    display: flex;
+    flex-direction: column;
+    /* background-color: yellow; */
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: white;
+}
+.projects-box:hover{
+    transform: scale(1.1);
+    cursor: pointer;
 }
 .projects-box .projects-info{
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     left: 0;
     width: 100%;
@@ -373,18 +396,18 @@ span{
     text-align: center;
     padding: 0 4rem;
     cursor: pointer;
-    transition: 0.5s ease;
+    /* transition: 0.5s ease; */
 }
-.projects-box .projects-info:hover{
+/* .projects-box .projects-info:hover{
     background: radial-gradient(rgba(0, 0, 0, 0.5), var(--main-color));
     transform: scale(1.1);
-}
+} */
 .projects-info h4{
     font-size: 3rem;
     color: white;
     font-weight: 800;
 }
-.projects-info p{
+a .projects-info a p{
     font-size: 1.6rem;
     margin: 0.3rem 0 1rem;
     font-weight: 600;
