--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ span{
 }
 .home-content h3:nth-of-type(2){
     margin-bottom: 2rem;
-    /* font-size: 5rem; */
 }
 .home-content h1{
     font-size: 8rem;
@@ -279,12 +278,14 @@ span{
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    /* border: 1px red solid; */
+    flex-wrap:wrap;
 }
 .tech-box{
-    width: 10vw;
     display: flex;
-    /* border: 1px red solid; */
+    justify-content: center;
+    align-items: center;
+    width: 10vw;
+    margin: 50px;
 }
 .tech-box i{
     font-size: 14rem;
@@ -344,7 +345,7 @@ span{
 .projects-container{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     justify-content: center;
     align-items: center;
     gap: 2.5rem;
@@ -354,8 +355,6 @@ span{
     position: relative;
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--bg-color);
-    /* overflow: hidden; */
-    /* display: inline-block; */
     min-height: 400px
 }
 .projects-box img{
@@ -363,17 +362,12 @@ span{
     border-radius: 2rem;
     transition: 0.5s ease;
 }
-/* .projects-box:hover img{
-    transform: scale(1.1);
-} */
 .projects-box{
     transition: 0.5s ease;
-    /* border: 2px solid red; */
 }
 .projects-box a{
     display: flex;
     flex-direction: column;
-    /* background-color: yellow; */
     width: 100%;
     height: 100%;
     text-decoration: none;
@@ -384,7 +378,6 @@ span{
     cursor: pointer;
 }
 .projects-box .projects-info{
-    /* position: absolute; */
     bottom: 0;
     left: 0;
     width: 100%;
@@ -396,12 +389,7 @@ span{
     text-align: center;
     padding: 0 4rem;
     cursor: pointer;
-    /* transition: 0.5s ease; */
 }
-/* .projects-box .projects-info:hover{
-    background: radial-gradient(rgba(0, 0, 0, 0.5), var(--main-color));
-    transform: scale(1.1);
-} */
 .projects-info h4{
     font-size: 3rem;
     color: white;
