--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 :root{
     --bg-color: #141414;
-    --second-bg-color: #191919;
+    --second-bg-color: #252525;
     --text-color: white;
     --main-color: #21b368;
 }
@@ -23,12 +23,13 @@ body{
     background: var(--bg-color);
     color: var(--text-color);
     width: 100vw;
+    padding: 20px;
 }
 .header{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     padding: 3rem 9%;
     background: rgba(0,0,0,0.8);
     backdrop-filter: blur(10px);
@@ -344,7 +345,7 @@ span{
 }
 .projects-container{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(1,1fr);
     grid-template-rows: repeat(1, 1fr);
     justify-content: center;
     align-items: center;
@@ -355,10 +356,11 @@ span{
     position: relative;
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--bg-color);
-    min-height: 400px
+    min-height: 400px;
+    min-width: 80vw;
 }
 .projects-box img{
-    width: 100%;
+    width: 40%;
     border-radius: 2rem;
     transition: 0.5s ease;
 }
@@ -367,16 +369,16 @@ span{
 }
 .projects-box a{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     height: 100%;
     text-decoration: none;
     color: white;
 }
-.projects-box:hover{
+/* .projects-box:hover{
     transform: scale(1.1);
     cursor: pointer;
-}
+} */
 .projects-box .projects-info{
     bottom: 0;
     left: 0;
@@ -394,11 +396,16 @@ span{
     font-size: 3rem;
     color: white;
     font-weight: 800;
+    padding: 10px;
 }
 a .projects-info a p{
     font-size: 1.6rem;
     margin: 0.3rem 0 1rem;
     font-weight: 600;
+}
+.projects-info p{
+    padding: 8px;
+    font-size: 18px;
 }
 .projects-info a{
     color: white;
@@ -670,6 +677,15 @@ a .projects-info a p{
         margin-bottom: 3rem;
     }
     .projects-container{
-        grid-template-columns: repeat(2,1fr)
+        grid-template-columns: repeat(1,1fr)
+    }
+    .projects-box a{
+        flex-direction: column;
+        align-items: center;
+    }
+    .projects-box img{
+        width: 100%;
+        border-radius: 2rem;
+        transition: 0.5s ease;
     }
 }
